問い合わせ機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <%= yield %>
 
     <footer class="footer">
-      <a class="post" href="/inquiry">お問い合わせ</a>
+      <a class="post" href="/contact">お問い合わせ</a>
       <a class="post" href="/guide">ご利用ガイド</a>
       <a class="post" href="/faq">FAQ</a>
       <a class="post" href="/columns">花コラム</a>
